# backend/models/ratings.go
@@ -12,13 +12,15 @@ type RatingCard struct {
 }
 
 type Rating struct {
-	ID                    int       `json:"id" gorm:"primaryKey;autoIncrement"`
-	UserEmail             string       `json:"userEmail"`
-	TimeStampCandidate    *time.Time `json:"timeStampCandidate" gorm:"default:null"`
-	TimeStampEmployer     *time.Time `json:"timeStampEmployer" gorm:"default:null"`
-	RatingCardID          int       `json:"ratingCardId" gorm:"foreignKey:RatingCardID"`
-	RatingCandidate       int       `json:"ratingCandidate"`
-	TextResponseCandidate string    `json:"textResponseCandidate"`
-	RatingEmployer        int       `json:"ratingEmployer"`
-	TextResponseEmployer  string    `json:"textResponseEmployer"`
+	ID                     int        `json:"id" gorm:"primaryKey;autoIncrement"`
+	UserEmail              string     `json:"userEmail"`
+	TimeStampCandidate     *time.Time `json:"timeStampCandidate" gorm:"default:null"`
+	TimeStampEmployer      *time.Time `json:"timeStampEmployer" gorm:"default:null"`
+	RatingCardID           int        `json:"ratingCardId" gorm:"foreignKey:RatingCardID"`
+	RatingCandidate        int        `json:"ratingCandidate"`
+	TextResponseCandidate  string     `json:"textResponseCandidate"`
+	NotApplicableCandidate bool       `json:"notApplicableCandidate"`
+	RatingEmployer         int        `json:"ratingEmployer"`
+	TextResponseEmployer   string     `json:"textResponseEmployer"`
+	NotApplicableEmployer  bool       `json:"notApplicableEmployer"`
 }
